--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="top-banner">
        <div class="half-width">
         <h1>Welcome To </h1>
     <h1><span class="name-highlight">My</span> Website</h1>
     <h3>World-class professional web dev </h3>
     <p>i'm a web dev.I like to make different kind of websites.My passion is to be a well-known web dev.</p>
+    <a class="link-button" target="_blank" href="https://github.com/Ashraful42/Portfolio">Hire Me</a>
        </div>
        <div class="half-width">
            <img src="images/profile1.png" alt="">
@@ -22,5 +23,37 @@
     
     
 </section>
+<section class="dream-area">
+    <div class="half-width">
+        <img src="images/profile2.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Big Dream</h2>
+        <h3>Become a reknowned web developer</h3>
+        <p>I know the basic html, css. I've tried to make some websites.I like to make websites.</p>
+        <a class="link-button" target="_blank"
+        href="https://web.programming-hero.com/course/video/web-3-4-9-dream-area-dream-text-and-download-resume-link-button">Download resume</a>
+
+    </div>
+</section>
+<section class="experience-area">
+    <h2>Experiences</h2>
+    <div id="full-stack" class="half-width single-experience">
+        <h2>Full Stack Web Dev</h2>
+        <h3><span class="orange-highlight"> 2021- present | pro level Web Dev </span> </h3>
+        <p>I'm the master of html,css and javascript.I know the python language very well. I use django framework for making a website.</p>
+
+    </div>
+    <div id="baby-web" class="half-width single-experience">
+        <h2>Baby Web Dev</h2>
+        <h3> <span class="orange-highlight"> 2020 - 2021 | Programming Hero Learner</span> </h3>
+        <p>They didn't offer me a job. But I made some basic websites, some web based projects. I also learn JS, CSS and HTML.</p>
+
+    </div>
+
+</section>
+<footer>
+    <p>@ shimul aaryan's all copyright</p>
+</footer>
 </body>
 </html>
